 * Removed deprecated TruncatedDistribution single bound accessors
 * Removed deprecated Function constructors
 * Removed deprecated Sample,SampleImplementation::operator*(SquareMatrix) and operator/(SquareMatrix) (and in-place operators)
 * Removed deprecated SampleImplementation::scale(SquareMatrix)

=== Python module ===

=== Miscellaneous ===

=== Bug fixes ===


== 1.11rc1 release (2018-04-11) == #release-1.11rc1

=== Library ===

==== Major changes ====

==== New classes ====
 * FrechetFactory
 * Fehlberg
 * TranslationFunction
 * DomainComplement, DomainIntersection, DomainUnion, DomainDisjunctiveUnion, DomainDifference
 * SmoothedUniform
 * NearestNeighbourAlgorithm, RegularGridNearestNeighbour, NaiveNearestNeighbour, NearestNeighbour1D
 * EnclosingSimplex, EnclosingSimplexImplementation, NaiveEnclosingSimplex, RegularGridEnclosingSimplex, EnclosingSimplexMonotonic1D, BoundingVolumeHierarchy
 * IndicesCollection
 * SymbolicParserExprTk
 * EvaluationProxy
 * MemoizeFunction, MemoizeEvaluation
 * Evaluation, Gradient, Hessian
 * MeshDomain
 * NormInfEnumerateFunction
 * FunctionalChaosSobolIndices
 * P1LagrangeInterpolation
 * FilonQuadrature

==== API changes ====
 * Removed deprecated NumericalMathFunction class
 * Removed deprecated QuadraticNumericalMathFunction class
 * Removed deprecated LinearNumericalMathFunction class
 * Removed deprecated NumericalSample class
 * Removed deprecated NumericalPoint[WithDescription] class
 * Removed deprecated NumericalScalarCollection class
 * Removed deprecated NumericalComplexCollection class
 * Removed deprecated PosteriorRandomVector class
 * Removed deprecated ConditionedNormalProcess class
 * Removed deprecated ResourceMap::[SG]AsNumericalScalar methods
 * Removed deprecated SpecFunc::*NumericalScalar* constants
 * Removed deprecated PlatformInfo::GetConfigureCommandLine method
 * Removed deprecated Field::getSample method
 * Removed deprecated SobolIndicesAlgorithm::Generate method