@@ -1,7 +1,3 @@
-Remove deprecated Domain(a, b) constructor in 1.12
-Remove deprecated Domain,DomainImplementation::numericallyContains, isEmpty, isNumericallyEmpty, getVolume, getNumericalVolume, computeVolume in 1.12
-Remove deprecated Interval,Mesh::computeVolume in 1.12
-Remove deprecated Domain,DomainImplementation::getLowerBound, getUpperBound in 1.12
 Remove deprecated SobolIndicesAlgorithm::[sg]etBootstrapConfidenceLevel in 1.12
 Remove deprecated Mesh::getVerticesToSimplicesMap,computeSimplexVolume in 1.12
 Remove deprecated FunctionalChaosRandomVector::getSobol* in 1.13
