@@ -34,13 +34,6 @@ Domain::Domain():
   // Nothing to do
 }
 
-Domain::Domain(const Point & a,
-               const Point & b):
-  TypedInterfaceObject<DomainImplementation>(new Interval(a, b))
-{
-  LOGWARN(OSS() << "Domain::Domain(const Point & a, const Point & b) is deprecated in favor of Interval constructor.");
-}
-
 /* Default constructor */
 Domain::Domain(const DomainImplementation & implementation):
   TypedInterfaceObject<DomainImplementation>(implementation.clone())
@@ -64,55 +57,6 @@ Bool Domain::contains(const Point & point) const
 Domain::BoolCollection Domain::contains(const Sample & sample) const
 {
   return getImplementation()->contains(sample);
-}
-
-/* Check if the given point is inside of the closed interval */
-Bool Domain::numericallyContains(const Point & point) const
-{
-  LOGWARN(OSS() << "Domain::numericallyContains is deprecated in favor of specific method in classes derived from DomainImplementation.");
-  return getImplementation()->numericallyContains(point);
-}
-
-/* Check if the domain is empty, i.e if its numerical volume is zero */
-Bool Domain::isEmpty() const
-{
-  LOGWARN(OSS() << "Domain::isEmpty is deprecated in favor of specific method in classes derived from DomainImplementation.");
-  return getImplementation()->isEmpty();
-}
-
-/* Check if the domain is numerically empty, i.e if its numerical volume is zero */
-Bool Domain::isNumericallyEmpty() const
-{
-  LOGWARN(OSS() << "Domain::isNumericallyEmpty is deprecated in favor of specific method in classes derived from DomainImplementation.");
-  return getImplementation()->isNumericallyEmpty();
-}
-
-/* Get the volume of the domain */
-Scalar Domain::getVolume() const
-{
-  LOGWARN(OSS() << "Domain::getVolume is deprecated in favor of specific method in classes derived from DomainImplementation.");
-  return getImplementation()->getVolume();
-}
-
-/* Get the numerical volume of the domain */
-Scalar Domain::getNumericalVolume() const
-{
-  LOGWARN(OSS() << "Domain::getNumericalVolume is deprecated in favor of specific method in classes derived from DomainImplementation.");
-  return getImplementation()->getNumericalVolume();
-}
-
-/* Lower bound of the bounding box */
-Point Domain::getLowerBound() const
-{
-  LOGWARN(OSS() << "Domain::getLowerBound is deprecated in favor of specific method in classes derived from DomainImplementation.");
-  return getImplementation()->getLowerBound();
-}
-
-/* Upper bound of the bounding box */
-Point Domain::getUpperBound() const
-{
-  LOGWARN(OSS() << "Domain::getUpperBound is deprecated in favor of specific method in classes derived from DomainImplementation.");
-  return getImplementation()->getUpperBound();
 }
 
 END_NAMESPACE_OPENTURNS
